--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "main": "./pencilblue.js",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "0.10.0"
   },
   "scripts": {
     "start": "node pencilblue.js",
